# scry

./: .gitattributes  CMakeLists.txt  README.md
include/: codegen.hpp  ct_string.hpp  definitions.hpp  generation.hpp  initregex.hpp  lexer.hpp  match.hpp  optimise.hpp  parser.hpp  regex.hpp  traits.hpp  util.hpp
src/: CMakeLists.txt  initregex.cpp
test/: CMakeLists.txt  test.cpp
